[package]
name = "pyrsdameraulevenshtein"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyrsdameraulevenshtein"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.1", features = ["extension-module"] }
