[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[project]
name = "pyrsdameraulevenshtein"
version = "1.0.1"
description = "Damererau-Levenshtein implementation with Rust for fast performance."
readme = "README.md"
authors = [{ name = "Jonas Blatt", email = "jonblatt1992@gmail.com" }]
requires-python = ">=3.9"
keywords = ["distance", "rust", "distance", "dameraulevenshtein", "damerau", "levenshtein"]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Utilities",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

