[project]
name = "pyrsdameraulevenshtein"
version = "1.1.0"
description = "Damererau-Levenshtein implementation with Rust for high-performance."
readme = "README.md"
authors = [
    { name = "Jonas Blatt", email = "jonas@blatts.de" }
]
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
keywords = ["distance", "rust", "distance", "dameraulevenshtein", "damerau", "levenshtein"]

classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Utilities",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/joleaf/pyrsdameraulevenshtein"
repository = "https://github.com/joleaf/pyrsdameraulevenshtein"

[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"